# prime

./: .gitignore  README.md  readthedocs.yaml
cdf/: cdf_writer.py  cdfdicts.py
cdf/prime/1994/11/: prime_bsn_19941130.cdf
cdf/prime/1994/12/: prime_bsn_19941201.cdf  prime_bsn_19941202.cdf  prime_bsn_19941203.cdf  prime_bsn_19941204.cdf  prime_bsn_19941205.cdf  prime_bsn_19941206.cdf  prime_bsn_19941207.cdf  prime_bsn_19941208.cdf  prime_bsn_19941209.cdf  prime_bsn_19941210.cdf  prime_bsn_19941211.cdf  prime_bsn_19941212.cdf  prime_bsn_19941213.cdf  prime_bsn_19941214.cdf  prime_bsn_19941215.cdf  prime_bsn_19941216.cdf  prime_bsn_19941217.cdf  prime_bsn_19941218.cdf  prime_bsn_19941219.cdf  prime_bsn_19941220.cdf  prime_bsn_19941221.cdf  (+10 more)
docs/: index.html  primesw.html  search.js  templates.html
docs/primesw/: prime.html  primesh.html
docs/source/: api.rst  conf.py  index.rst  predictor.rst  usage.rst
docs/source/_templates/: custom_module_template.rst  notes.txt
docs/templates/: _lunr_search.inc.mako  config.mako  css.mako  head.mako  html.mako  logo.mako  pdf.mako  search.mako  text.mako
paper/: README.md  cdfdicts.py  ds_hp.py  ds_prepper.ipynb  ks_custom.py  model_run.py  net_prod.ipynb  omni.py  paper_plots.ipynb  prime_sw_005.h5  sw_hypersearch.py  sw_lib.py  sw_scripts.py
prime_lib/: MANIFEST.in  README.md  cdfs.ipynb  pyproject.toml  pyproject_poetry2.toml  setup.py
prime_lib/configs/: testing_config.yaml
prime_lib/docs/: docs.html  index.html  primesw.html  search.js
prime_lib/docs/primesw/: prime.html
prime_lib/notebooks/: data.ipynb  torchtest.ipynb
prime_lib/notebooks/lightning_logs/version_13/checkpoints/: epoch=0-step=24.ckpt
prime_lib/notebooks/lightning_logs/version_14/: hparams.yaml
prime_lib/notebooks/lightning_logs/version_9/: hparams.yaml
prime_lib/primesw/: __init__.py  data.py  mainpage.md  models.py  prime.py  prime_torch.py  primeinsc_v0.1.0.pkl  primesh.py  primesh_v0.1.0.keras  primeshinsc_v0.1.0.pkl  primeshlocsc_v0.1.0.pkl  primeshtarsc_v0.1.0.pkl  primetarsc_v0.1.0.pkl  utils.py
prime_lib/primesw/model_bin/: primeinsc_v0.1.0.pkl  primetarsc_v0.1.0.pkl
scripts/: datascraper.py  datascript.py  pt212_env.yaml  testrun.py
scripts/torch_env_creation/: activate_env_vars.sh  deactivate_env_vars.sh  pt_conda.list  setup_conda_pytorch.sh
(+11607 files in other folders)
